--- a/index.html
+++ b/index.html
@@ -111,22 +111,26 @@
             <main class="p-6">
                 <!-- Dashboard Page -->
                 <div id="dashboard-page" class="page">
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-6">
+                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-6 mb-6">
                         <div class="bg-white p-6 rounded-lg shadow p-x-5">
                             <h3 class="text-lg font-semibold mb-2">Total Games</h3>
-                            <p class="text-3xl font-bold text-blue-600">20</p>
+                            <p class="text-3xl font-bold text-blue-600 p-res">20</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow p-x-5">
                             <h3 class="text-lg font-semibold mb-2">Total Users</h3>
-                            <p class="text-3xl font-bold text-green-600">3</p>
+                            <p class="text-3xl font-bold text-green-600 p-res">3</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow p-x-5">
                             <h3 class="text-lg font-semibold mb-2">Total Deposits</h3>
-                            <p class="text-3xl font-bold text-yellow-600">$100.00</p>
+                            <p class="text-3xl font-bold text-yellow-600 p-res">$100.00</p>
                         </div>
                         <div class="bg-white p-6 rounded-lg shadow p-x-5">
                             <h3 class="text-lg font-semibold mb-2">Total Profit</h3>
-                            <p class="text-3xl font-bold text-purple-600">$50.00</p>
+                            <p class="text-3xl font-bold text-purple-600 p-res">$50.00</p>
+                        </div>
+                        <div class="bg-white p-6 rounded-lg shadow p-x-5">
+                            <h3 class="text-lg font-semibold mb-2">Users Online</h3>
+                            <p class="text-3xl font-bold text-red-600 p-res">1000</p>
                         </div>
                     </div>
                     <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 mb-6">
@@ -172,7 +176,6 @@
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Win Rate (%)</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Pre-set Result</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                     </tr>
                                 </thead>
@@ -236,6 +239,7 @@
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Game</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">User</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Details</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Expiration</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                     </tr>
@@ -274,14 +278,7 @@
                     <label class="block text-sm font-medium text-gray-700 mb-1">Win Rate (%)</label>
                     <input type="number" id="add-game-win-rate" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter win rate (0-100)" min="0" max="100">
                 </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Pre-set Result</label>
-                    <select id="add-game-pre-result" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="">None</option>
-                        <option value="Win">Win</option>
-                        <option value="Lose">Lose</option>
-                    </select>
-                </div>
+
                 <p id="add-game-error" class="text-red-500 text-sm hidden">All fields are required and win rate must be 0-100.</p>
                 <div class="flex justify-end space-x-2">
                     <button id="add-game-cancel" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded-lg">Cancel</button>
@@ -373,32 +370,26 @@
         </div>
     </div>
 
-    <!-- Add Manual Override Modal -->
+   <!-- Add Manual Override Modal -->
     <div id="add-override-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
         <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md p-x-5">
             <h3 class="text-lg font-semibold mb-4">Add/Edit Manual Override</h3>
             <div class="space-y-4">
                 <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Game</label>
+                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-game">Game</label>
                     <select id="add-override-game" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <option value="">Select Game</option>
                     </select>
                 </div>
                 <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">User Email</label>
+                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-user-email">User Email</label>
                     <select id="add-override-user-email" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <option value="">Select User</option>
                     </select>
                 </div>
+                <div id="add-override-dynamic-fields" class="space-y-4"></div>
                 <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Result</label>
-                    <select id="add-override-result" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="Win">Win</option>
-                        <option value="Lose">Lose</option>
-                    </select>
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1">Expiration Date</label>
+                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-expiration">Expiration Date</label>
                     <input type="date" id="add-override-expiration" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
                 </div>
                 <p id="add-override-error" class="text-red-500 text-sm hidden">All fields are required.</p>
@@ -410,6 +401,29 @@
         </div>
     </div>
 
+    <div id="game-logs-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-4xl">
+            <h3 class="text-lg font-semibold mb-4">Game Play Logs</h3>
+            <div class="overflow-x-auto">
+                <table class="min-w-full divide-y divide-gray-200">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Player</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Bet Amount</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Payout</th>
+                            <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Date</th>
+                        </tr>
+                    </thead>
+                    <tbody id="game-logs-table-body" class="bg-white divide-y divide-gray-200"></tbody>
+                </table>
+            </div>
+            <div class="flex justify-end mt-4">
+                <button id="game-logs-close" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded-lg">Close</button>
+            </div>
+        </div>
+    </div>
+    
     <script src="main.js"></script>
 </body>
 </html>
