--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <i class="fas fa-users mr-3"></i>
                     <span class="nav-text">Users</span>
                 </a>
-                <a href="#manual-override" class="nav-link flex items-center px-4 py-3 hover:bg-gray-700">
+                <a href="#manage" class="nav-link flex items-center px-4 py-3 hover:bg-gray-700">
                     <i class="fas fa-credit-card mr-3"></i>
-                    <span class="nav-text">Manual Override</span>
+                    <span class="nav-text">Manage</span>
                 </a>
             </nav>
         </aside>
@@ -40,20 +40,17 @@
         <!-- Main Content -->
         <div class="content flex-1 overflow-y-auto">
             <!-- Header -->
-            <header class="bg-white p-4 shadow flex justify-between items-center sticky top-0 z-10 header-top" >
+            <header class="bg-white p-4 shadow flex justify-between items-center sticky top-0 z-10 header-top">
                 <div class="flex items-center menu-icon">
-                    <!-- Hamburger Menu (chỉ hiển thị ở mobile) -->
                     <button id="hamburger-menu" class="text-gray-600 hover:text-gray-800 focus:outline-none md:hidden">
                         <i class="fas fa-bars"></i>
                     </button>
-                    <!-- Sidebar Toggle (chỉ hiển thị ở PC) -->
                     <button id="toggle-sidebar" class="text-gray-600 hover:text-gray-800 focus:outline-none hidden md:block">
                         <i class="fas fa-bars"></i>
                     </button>
                     <h2 id="page-title" class="ml-4 text-xl font-semibold">Dashboard</h2>
                 </div>
                 <div class="flex items-center relative">
-                    <!-- Thanh search (ẩn ở mobile) -->
                     <div class="relative mr-4 hidden md:block">
                         <input type="text" id="header-search" class="border rounded-lg px-3 py-1 text-sm focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Search...">
                         <div id="search-results" class="absolute hidden bg-white border rounded-lg mt-1 w-64 max-h-60 overflow-y-auto shadow-lg z-20">
@@ -77,7 +74,7 @@
                 </div>
             </header>
 
-            <!-- Hamburger Menu Content (chỉ hiển thị ở mobile) -->
+            <!-- Hamburger Menu Content -->
             <div id="hamburger-menu-content" class="fixed inset-0 bg-gray-800 bg-opacity-75 z-50 hidden md:hidden">
                 <div class="bg-gray-800 text-white w-64 h-full p-4">
                     <div class="flex justify-between items-center mb-4">
@@ -99,7 +96,7 @@
                             <i class="fas fa-users mr-3"></i>
                             <span class="nav-text">Users</span>
                         </a>
-                        <a href="#manual-override" class="nav-link flex items-center px-4 py-3 hover:bg-gray-700">
+                        <a href="#manage" class="nav-link flex items-center px-4 py-3 hover:bg-gray-700">
                             <i class="fas fa-credit-card mr-3"></i>
                             <span class="nav-text">Manual Override</span>
                         </a>
@@ -152,9 +149,9 @@
                 <!-- Games Page -->
                 <div id="games-page" class="page hidden">
                     <div class="flex justify-between items-center mb-6 my-res">
-                        <h3 class="text-lg font-semibold">Manage Games</h3>
+                        <h3 class="text-lg font-semibold">Manage Games Override</h3>
                         <button id="add-game-btn" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">
-                            <i class="fas fa-plus mr-2"></i>Add Game
+                            <i class="fas fa-plus mr-2"></i>Add Override
                         </button>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow mb-6 p-rp-1">
@@ -162,9 +159,9 @@
                             <input type="text" id="game-search" class="border rounded-lg px-3 py-2 mb-2 md:mb-0 md:mr-2 w-full md:w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Search games...">
                             <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-2">
                                 <select id="game-status-filter" class="border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
-                                    <option value="">All Statuses</option>
-                                    <option value="On">On</option>
-                                    <option value="Off">Off</option>
+                                    <option value="">All Results</option>
+                                    <option value="Win">Win</option>
+                                    <option value="Lose">Lose</option>
                                 </select>
                             </div>
                         </div>
@@ -172,17 +169,18 @@
                             <table id="game-table" class="min-w-full divide-y divide-gray-200">
                                 <thead class="bg-gray-50">
                                     <tr>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Game</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Win Rate (%)</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Details</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Expiration</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody id="game-table-body" class="bg-white divide-y divide-gray-200"></tbody>
                             </table>
                         </div>
-                        <div id="game-pagination" class="mt-4" style="display: block;"></div>
+                        <div id="game-pagination" class="mt-4"></div>
                     </div>
                 </div>
 
@@ -224,23 +222,32 @@
                 </div>
 
                 <!-- Manual Override Page -->
-                <div id="manual-override-page" class="page hidden">
+                <div id="manage-page" class="page hidden">
                     <div class="flex justify-between items-center mb-6 my-res">
-                        <h3 class="text-lg font-semibold">Manage Manual Overrides</h3>
+                        <h3 class="text-lg font-semibold">Manage</h3>
                         <button id="add-override-btn" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">
-                            <i class="fas fa-plus mr-2"></i>Add Override
+                            <i class="fas fa-plus mr-2"></i>Add Game
                         </button>
                     </div>
                     <div class="bg-white p-6 rounded-lg shadow mb-6 p-rp-1">
+                        <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-4">
+                            <input type="text" id="override-search" class="border rounded-lg px-3 py-2 mb-2 md:mb-0 md:mr-2 w-full md:w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Search overrides...">
+                            <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-2">
+                                <select id="override-status-filter" class="border rounded-lg px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500">
+                                    <option value="">All Statuses</option>
+                                    <option value="On">On</option>
+                                    <option value="Off">Off</option>
+                                </select>
+                            </div>
+                        </div>
                         <div class="overflow-x-auto">
-                            <table class="min-w-full divide-y divide-gray-200">
+                            <table id="override-table" class="min-w-full divide-y divide-gray-200">
                                 <thead class="bg-gray-50">
                                     <tr>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Game</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">User</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Result</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Details</th>
-                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Expiration</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Name</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Description</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Status</th>
+                                        <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Win Rate (%)</th>
                                         <th class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Actions</th>
                                     </tr>
                                 </thead>
@@ -255,34 +262,64 @@
     </div>
 
     <!-- Add Game Modal -->
-    <div id="add-game-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
+    <div id="add-game-modal" class="fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
+        <h2 class="text-xl font-semibold mb-4">Add/Edit Game Override</h2>
+        <div class="mb-4">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Game</label>
+            <select id="add-game-name" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <option value="">Select Game</option>
+            </select>
+        </div>
+        <div class="mb-4">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Description</label>
+            <input type="text" id="add-game-description" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <div class="mb-4">
+            <label class="block text-sm font-medium text-gray-700 mb-1">User</label>
+            <select id="add-game-user-email" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500"></select>
+        </div>
+        <div id="add-game-dynamic-fields" class="mb-4"></div>
+        <div class="mb-4">
+            <label class="block text-sm font-medium text-gray-700 mb-1">Expiration</label>
+            <input type="date" id="add-game-expiration" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+        </div>
+        <p id="add-game-error" class="text-red-500 text-sm mb-4 hidden">All fields are required.</p>
+        <div class="flex justify-end space-x-2">
+            <button id="add-game-cancel" class="bg-gray-300 hover:bg-gray-400 text-gray-800 px-4 py-2 rounded-lg">Cancel</button>
+            <button id="add-game-save" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">Save</button>
+        </div>
+        </div>
+    </div>
+
+    <!-- Add Override Modal -->
+    <div id="add-override-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
         <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md p-x-5">
             <h3 class="text-lg font-semibold mb-4">Add/Edit Game</h3>
             <div class="space-y-4">
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Game Name</label>
-                    <input type="text" id="add-game-name" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter game name">
+                    <input type="text" id="add-override-name" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter game name">
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Description</label>
-                    <textarea id="add-game-description" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter description"></textarea>
+                    <textarea id="add-override-description" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter description"></textarea>
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Status</label>
-                    <select id="add-game-status" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+                    <select id="add-override-status" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
                         <option value="On">On</option>
                         <option value="Off">Off</option>
                     </select>
                 </div>
                 <div>
                     <label class="block text-sm font-medium text-gray-700 mb-1">Win Rate (%)</label>
-                    <input type="number" id="add-game-win-rate" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter win rate (0-100)" min="0" max="100">
+                    <input type="number" id="add-override-win-rate" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500" placeholder="Enter win rate (0-100)" min="0" max="100">
                 </div>
-
-                <p id="add-game-error" class="text-red-500 text-sm hidden">All fields are required and win rate must be 0-100.</p>
+                <p id="add-override-error" class="text-red-500 text-sm hidden">All fields are required and win rate must be 0-100.</p>
                 <div class="flex justify-end space-x-2">
-                    <button id="add-game-cancel" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded-lg">Cancel</button>
-                    <button id="add-game-save" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">Save</button>
+                    <button id="add-override-cancel" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded-lg">Cancel</button>
+                    <button id="add-override-save" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">Save</button>
                 </div>
             </div>
         </div>
@@ -370,37 +407,7 @@
         </div>
     </div>
 
-   <!-- Add Manual Override Modal -->
-    <div id="add-override-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
-        <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md p-x-5">
-            <h3 class="text-lg font-semibold mb-4">Add/Edit Manual Override</h3>
-            <div class="space-y-4">
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-game">Game</label>
-                    <select id="add-override-game" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="">Select Game</option>
-                    </select>
-                </div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-user-email">User Email</label>
-                    <select id="add-override-user-email" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <option value="">Select User</option>
-                    </select>
-                </div>
-                <div id="add-override-dynamic-fields" class="space-y-4"></div>
-                <div>
-                    <label class="block text-sm font-medium text-gray-700 mb-1" for="add-override-expiration">Expiration Date</label>
-                    <input type="date" id="add-override-expiration" class="border rounded-lg px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
-                </div>
-                <p id="add-override-error" class="text-red-500 text-sm hidden">All fields are required.</p>
-                <div class="flex justify-end space-x-2">
-                    <button id="add-override-cancel" class="bg-gray-500 hover:bg-gray-600 text-white px-4 py-2 rounded-lg">Cancel</button>
-                    <button id="add-override-save" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg">Save</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    <!-- Game Logs Modal -->
     <div id="game-logs-modal" class="modal fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center hidden">
         <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-4xl">
             <h3 class="text-lg font-semibold mb-4">Game Play Logs</h3>
@@ -423,7 +430,7 @@
             </div>
         </div>
     </div>
-    
+
     <script src="main.js"></script>
 </body>
 </html>
