update img file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Sidebar -->
         <aside class="sidebar bg-gray-800 text-white h-screen fixed top-0 left-0 overflow-y-auto">
             <div class="p-4 flex items-center">
-                <img src="./public/image/magic88.jpg" alt="Logo" class="w-10 h-10 rounded-full">
+                <img src="./image/magic88.jpg" alt="Logo" class="w-10 h-10 rounded-full">
                 <h1 class="ml-3 text-lg font-semibold nav-text">Magic88</h1>
             </div>
             <nav class="mt-4">
