--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div id="hamburger-menu-content" class="fixed inset-0 bg-gray-800 bg-opacity-75 z-50 hidden md:hidden">
                 <div class="bg-gray-800 text-white w-64 h-full p-4">
                     <div class="flex justify-between items-center mb-4">
+                        <img src="./image/magic88.jpg" alt="Logo" class="w-10 h-10 rounded-full">
                         <h1 class="text-lg font-semibold">Menu</h1>
                         <button id="close-hamburger" class="text-white focus:outline-none">
                             <i class="fas fa-times"></i>
